Threshold for significant methylation variation and boxplot visualization.

--- a/ClusterAnalysisOfEpigenome.ipynb
+++ b/ClusterAnalysisOfEpigenome.ipynb
@@ -732,7 +732,29 @@
    "id": "1bb15a39-f7c4-481a-a388-89a6fb030dbc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a boxplot to visualize the distribution of the standard deviations of beta values\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.boxplot(data=std_dev, orient='h', color = 'lightgreen')\n",
+    "\n",
+    "# Calculate the 95th percentile threshold\n",
+    "percentile_threshold = np.percentile(std_dev, 95)\n",
+    "\n",
+    "# Overlay the threshold line\n",
+    "plt.axvline(x=percentile_threshold, color='red', linestyle='--', label=f'95th Percentile Threshold ({percentile_threshold:.2f})')\n",
+    "\n",
+    "# Labels and title\n",
+    "plt.xlabel('Standard Deviation of Beta Values')\n",
+    "plt.title('Boxplot of Standard Deviations with 95th Percentile Threshold')\n",
+    "plt.legend()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n",
+    "\n",
+    "significant = df[df['std_dev'] >= percentile_threshold]\n",
+    "print(\"Percentile threshold: \", percentile_threshold)\n",
+    "print(f\"Number of significant methylation values: {len(significant)}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -759,7 +781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
