--- a/ClusterAnalysisOfEpigenome.ipynb
+++ b/ClusterAnalysisOfEpigenome.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "96cbd03a-124d-4152-b866-42aa49f6432f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "79a01997-26eb-474a-9e53-fd335aca53fc",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_12900/2888831559.py:2: DtypeWarning: Columns (1,4,5,8,9,12,13,16,17,20,21,24,25,28,29,32,33,36,37,40) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_2966/2888831559.py:2: DtypeWarning: Columns (1,4,5,8,9,12,13,16,17,20,21,24,25,28,29,32,33,36,37,40) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(data_path, sep='\\t')\n"
      ]
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7b8934a7-c974-4dd8-81d0-e9cb243cd7d5",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ed21310d-85a7-4b94-a6a5-f04fe2454dd2",
    "metadata": {
     "scrolled": true
@@ -364,7 +364,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2bb944da-bdb2-4ceb-aae8-a9f7e9219407",
    "metadata": {
     "scrolled": true
@@ -636,7 +636,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "84a2e064-121f-4a81-ad70-fcbfeffaaf7b",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
        "cg00000292              0.929602191814778  0.637718731276499  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "91806d45-29bf-457d-a4f1-edc5bb369e1d",
    "metadata": {},
    "outputs": [],
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3ba13113-b3c1-4b91-963e-db1036340d54",
    "metadata": {},
    "outputs": [],
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ee986f70-a7f0-41a4-ae99-6862872366f6",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "1bb15a39-f7c4-481a-a388-89a6fb030dbc",
    "metadata": {},
    "outputs": [
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9bd7bd8e-1a7d-484d-9bbc-1d76fc4c5968",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "9fd24e76-27b5-4708-89c9-feb6306429c0",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "7c1b9433-0e13-4149-8927-be1765ede609",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "6f8fdd93-871f-4faa-b602-e00c2e169bd4",
    "metadata": {},
    "outputs": [
@@ -1084,21 +1084,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
+   "id": "41c4e0ae-f9b2-4242-afeb-5400d58d422e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ovde dodati CPG lokuse klasterovanje"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "91399b98-7b30-4fb2-ad86-698414ab290c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10589, 2)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set the window size (16,330 base pairs)\n",
     "window_size = 16330\n",
@@ -1115,72 +1114,135 @@
     "\n",
     "# Compute correlations and identify boundaries\n",
     "window_mean_correlations = []\n",
-    "boundary_indices = []\n",
     "\n",
     "for (chromosome, window), group in grouped_windows:\n",
     "    # Extract beta values for loci in this window\n",
     "    beta_values_window = group.filter(like='Beta_value', axis=1)\n",
+    "\n",
+    "    # Detect and exclude constant columns\n",
+    "    constant_columns = (beta_values_window.nunique() <= 1)\n",
+    "    if constant_columns.any():\n",
+    "        beta_values_window = beta_values_window.loc[:, ~constant_columns]\n",
     "    \n",
     "    # Compute mean correlation within the window\n",
     "    if beta_values_window.shape[1] > 1:\n",
     "        correlation_matrix = beta_values_window.corr()\n",
-    "        mean_correlation = correlation_matrix.mean().mean()\n",
+    "        mean_correlation = correlation_matrix.stack().mean()\n",
     "    else:\n",
     "        mean_correlation = 0  # Single CpG in the window\n",
     "    \n",
     "    window_mean_correlations.append(mean_correlation)\n",
     "\n",
-    "    # Detect boundaries based on sharp changes in correlation\n",
-    "    if len(window_mean_correlations) > 1:\n",
-    "        prev_mean = window_mean_correlations[-2]\n",
-    "        if abs(mean_correlation - prev_mean) > 0.95:  # Threshold for significant change\n",
-    "            boundary_indices.append(window)\n",
+    "# Detecting boundaries of region with sharp changes in methylation levels\n",
+    "threshold = np.percentile(window_mean_correlations, 95)\n",
+    "boundaries = [i for i, corr in enumerate(window_mean_correlations) if corr > threshold]\n",
     "\n",
     "# Convert results into a DataFrame for visualization\n",
     "results_df = pd.DataFrame({\n",
     "    'Window': range(len(window_mean_correlations)),\n",
     "    'Mean_Correlation': window_mean_correlations\n",
-    "})\n",
-    "\n",
-    "results_df.shape"
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "id": "5d733836-7004-467d-b8cb-63131910c402",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30"
+       "507"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(boundary_indices)"
+    "len(boundaries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "8d2d9434-6621-4475-a4b9-292f1f1fe4ad",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6cabc4e0-b0a7-46b7-95d5-b8f456b2742c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Window</th>\n",
+       "      <th>Mean_Correlation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Window  Mean_Correlation\n",
+       "0       0              0.00\n",
+       "1       1              1.00\n",
+       "2       2              0.36\n",
+       "3       3              0.64\n",
+       "4       4              0.16"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1218,6 +1280,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a561432d-df99-44b3-8e4a-9a039f2b5fcb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7eacacc8-ede2-424d-9f1b-86d1eaa0205c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f912ab00-48ec-4d64-96d8-b09c8952aa51",
    "metadata": {},
    "outputs": [],
    "source": []
