KMeans clustering for CpG loci

--- a/ClusterAnalysisOfEpigenome.ipynb
+++ b/ClusterAnalysisOfEpigenome.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "96cbd03a-124d-4152-b866-42aa49f6432f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "79a01997-26eb-474a-9e53-fd335aca53fc",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_g/ncq8t9cn3y97t4_nz1ds47c40000gn/T/ipykernel_10054/2888831559.py:2: DtypeWarning: Columns (1,4,5,8,9,12,13,16,17,20,21,24,25,28,29,32,33,36,37,40) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/_g/ncq8t9cn3y97t4_nz1ds47c40000gn/T/ipykernel_11879/2888831559.py:2: DtypeWarning: Columns (1,4,5,8,9,12,13,16,17,20,21,24,25,28,29,32,33,36,37,40) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(data_path, sep='\\t')\n"
      ]
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "id": "7b8934a7-c974-4dd8-81d0-e9cb243cd7d5",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "ed21310d-85a7-4b94-a6a5-f04fe2454dd2",
    "metadata": {
     "scrolled": true
@@ -364,7 +364,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "2bb944da-bdb2-4ceb-aae8-a9f7e9219407",
    "metadata": {
     "scrolled": true
@@ -636,7 +636,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "84a2e064-121f-4a81-ad70-fcbfeffaaf7b",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
        "cg00000292              0.929602191814778  0.637718731276499  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "id": "91806d45-29bf-457d-a4f1-edc5bb369e1d",
    "metadata": {},
    "outputs": [],
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "id": "3ba13113-b3c1-4b91-963e-db1036340d54",
    "metadata": {},
    "outputs": [],
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "id": "ee986f70-a7f0-41a4-ae99-6862872366f6",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "id": "1bb15a39-f7c4-481a-a388-89a6fb030dbc",
    "metadata": {},
    "outputs": [
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "9bd7bd8e-1a7d-484d-9bbc-1d76fc4c5968",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "9fd24e76-27b5-4708-89c9-feb6306429c0",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "id": "7c1b9433-0e13-4149-8927-be1765ede609",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "id": "6f8fdd93-871f-4faa-b602-e00c2e169bd4",
    "metadata": {},
    "outputs": [
@@ -1083,14 +1083,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2341dabb-b65e-469f-b289-5a9bf3e8cfb0",
+   "metadata": {},
+   "source": [
+    "## Clustering by CpG loci"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d66f3357-c4ac-42c6-9f09-f492499f8401",
+   "metadata": {},
+   "source": [
+    "### KMeans"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "41c4e0ae-f9b2-4242-afeb-5400d58d422e",
+   "execution_count": 42,
+   "id": "08597174-1753-4fa0-8abc-b1e6e8502351",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ovde dodati CPG lokuse klasterovanje\n",
-    "# TODO: KMeans - Lana"
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import silhouette_score, calinski_harabasz_score, davies_bouldin_score\n",
+    "from sklearn.model_selection import ParameterGrid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf6e19aa-eac4-4dd5-a0e5-c522aad15e57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_clusters: 2, Silhouette Score: 0.1888, Calinski Harabasz: 4175.5390, Davies-Bouldin: 2.0398\n",
+      "n_clusters: 3, Silhouette Score: 0.1724, Calinski Harabasz: 3538.9779, Davies-Bouldin: 1.9800\n",
+      "n_clusters: 4, Silhouette Score: 0.1478, Calinski Harabasz: 3090.4343, Davies-Bouldin: 1.8727\n",
+      "n_clusters: 5, Silhouette Score: 0.1357, Calinski Harabasz: 2638.9922, Davies-Bouldin: 1.9524\n",
+      "n_clusters: 6, Silhouette Score: 0.1357, Calinski Harabasz: 2457.9960, Davies-Bouldin: 1.8783\n",
+      "n_clusters: 7, Silhouette Score: 0.1388, Calinski Harabasz: 2299.5870, Davies-Bouldin: 1.9231\n",
+      "n_clusters: 8, Silhouette Score: 0.1315, Calinski Harabasz: 2116.3896, Davies-Bouldin: 1.9750\n",
+      "n_clusters: 9, Silhouette Score: 0.1364, Calinski Harabasz: 2030.0288, Davies-Bouldin: 1.9322\n",
+      "n_clusters: 10, Silhouette Score: 0.1173, Calinski Harabasz: 1895.7746, Davies-Bouldin: 1.9372\n",
+      "n_clusters: 11, Silhouette Score: 0.1440, Calinski Harabasz: 1862.5831, Davies-Bouldin: 1.8400\n",
+      "n_clusters: 12, Silhouette Score: 0.1331, Calinski Harabasz: 1794.3620, Davies-Bouldin: 1.8216\n",
+      "n_clusters: 13, Silhouette Score: 0.1345, Calinski Harabasz: 1730.1567, Davies-Bouldin: 1.7905\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = {'n_clusters': range(2, 15)}\n",
+    "\n",
+    "grid_search = ParameterGrid(param_grid)\n",
+    "\n",
+    "# Initialize variables to store the best scores\n",
+    "best_silhouette_score = -1\n",
+    "best_calinski_harabasz_score = -1\n",
+    "best_davies_bouldin_score = float('inf')  # Lower is better\n",
+    "best_params_silhouette = None\n",
+    "best_params_calinski = None\n",
+    "best_params_davies = None\n",
+    "\n",
+    "# Store results for the Elbow Method\n",
+    "inertia = []\n",
+    "\n",
+    "for params in grid_search:\n",
+    "    kmeans = KMeans(n_clusters=params['n_clusters'], random_state=42)\n",
+    "    clusters = kmeans.fit_predict(beta_values)\n",
+    "\n",
+    "    # Calculate metrics\n",
+    "    score_silhouette = silhouette_score(beta_values, clusters)\n",
+    "    score_calinski_harabasz = calinski_harabasz_score(beta_values, clusters)\n",
+    "    score_davies_bouldin = davies_bouldin_score(beta_values, clusters)\n",
+    "    inertia.append(kmeans.inertia_)  # Elbow Method\n",
+    "    \n",
+    "    print(f\"n_clusters: {params['n_clusters']}, \"\n",
+    "          f\"Silhouette Score: {score_silhouette:.4f}, \"\n",
+    "          f\"Calinski Harabasz: {score_calinski_harabasz:.4f}, \"\n",
+    "          f\"Davies-Bouldin: {score_davies_bouldin:.4f}\"\n",
+    ")\n",
+    "\n",
+    "    # Update the best scores and parameters\n",
+    "    if score_silhouette > best_silhouette_score:\n",
+    "        best_silhouette_score = score_silhouette\n",
+    "        best_params_silhouette = params\n",
+    "\n",
+    "    if score_calinski_harabasz > best_calinski_harabasz_score:\n",
+    "        best_calinski_harabasz_score = score_calinski_harabasz\n",
+    "        best_params_calinski = params\n",
+    "\n",
+    "    if score_davies_bouldin < best_davies_bouldin_score:\n",
+    "        best_davies_bouldin_score = score_davies_bouldin\n",
+    "        best_params_davies = params\n",
+    "\n",
+    "\n",
+    "# Plot Elbow Method\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.plot(range(2, 15), inertia, marker='o')\n",
+    "plt.xlabel('Number of Clusters')\n",
+    "plt.ylabel('Inertia')\n",
+    "plt.title('Elbow Method')\n",
+    "plt.show()\n",
+    "\n",
+    "# Print the best results\n",
+    "print(\"\\nBest Results:\")\n",
+    "print(f\"Best Silhouette Score: {best_silhouette_score:.4f} with parameters {best_params_silhouette}\")\n",
+    "print(f\"Best Calinski-Harabasz Score: {best_calinski_harabasz_score:.4f} with parameters {best_params_calinski}\")\n",
+    "print(f\"Best Davies-Bouldin Score: {best_davies_bouldin_score:.4f} with parameters {best_params_davies}\")"
    ]
   },
   {
