Added Spectral clustering for regions

--- a/ClusterAnalysisOfEpigenome.ipynb
+++ b/ClusterAnalysisOfEpigenome.ipynb
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "id": "99cc55b7-aa92-47e1-b95b-d260b1ae3c7d",
    "metadata": {},
    "outputs": [
@@ -1534,6 +1534,8 @@
    "source": [
     "param_grid = {'n_clusters': range(2, 15)}\n",
     "\n",
+    "grid_search = ParameterGrid(param_grid)\n",
+    "\n",
     "# Initialize best score variables\n",
     "best_silhouette_score = -1\n",
     "best_aic = float('inf')  # Lower is better\n",
@@ -1551,7 +1553,6 @@
     "best_params_calinski = None\n",
     "best_params_davies = None\n",
     "\n",
-    "grid_search = ParameterGrid(param_grid)\n",
     "results = []\n",
     "aic_scores = []\n",
     "bic_scores = []\n",
@@ -1635,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "id": "8c4f43d6-69ff-4f90-abaf-479383a4ed0c",
    "metadata": {},
    "outputs": [
@@ -2479,14 +2480,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33b4e467-48d6-4b6e-ad51-2bafe6da481d",
+   "metadata": {},
+   "source": [
+    "### Spectral Clustering"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "55d7b5d9-9ceb-4ea7-84fb-5b7244415045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Best Silhouette Score: -0.0161 Number of clusters: {'n_clusters': 13}\n",
+      "Best Calinski-Harabasz Index: 1.3719 Number of clusters: {'n_clusters': 8}\n",
+      "Best Davies-Bouldin Score: 0.6350 Number of clusters: {'n_clusters': 13}\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Spektralno - Lana"
+    "param_grid = {'n_clusters': range(2, 15)}\n",
+    "\n",
+    "grid_search = ParameterGrid(param_grid)\n",
+    "\n",
+    "best_silhouette_score = -1\n",
+    "best_calinski_harabasz_score = -1\n",
+    "best_davies_bouldin_score = float('inf')  \n",
+    "best_params_silhouette = None\n",
+    "best_params_calinski = None\n",
+    "best_params_davies = None\n",
+    "\n",
+    "for params in grid_search:\n",
+    "    spectral = SpectralClustering(n_clusters=params['n_clusters'], affinity='nearest_neighbors', random_state=42)\n",
+    "    clusters = spectral.fit_predict(regions_df[['Mean_Correlation']])\n",
+    "\n",
+    "    silhouette = silhouette_score(regions_df[['Mean_Correlation']], clusters)\n",
+    "    score_calinski_harabasz = calinski_harabasz_score(regions_df[['Mean_Correlation']], clusters)\n",
+    "    score_davies_bouldin = davies_bouldin_score(regions_df[['Mean_Correlation']], clusters)\n",
+    "    \n",
+    "    if silhouette is not None and silhouette > best_silhouette_score:\n",
+    "        best_silhouette_score = silhouette\n",
+    "        best_params_silhouette = params\n",
+    "\n",
+    "    if score_calinski_harabasz > best_calinski_harabasz_score:\n",
+    "        best_calinski_harabasz_score = score_calinski_harabasz\n",
+    "        best_params_calinski = params\n",
+    "\n",
+    "    if score_davies_bouldin < best_davies_bouldin_score:\n",
+    "        best_davies_bouldin_score = score_davies_bouldin\n",
+    "        best_params_davies = params\n",
+    "    \n",
+    "# Print the best results for each metric\n",
+    "print()\n",
+    "print(f\"Best Silhouette Score: {best_silhouette:.4f} Number of clusters: {best_params_silhouette}\")\n",
+    "print(f\"Best Calinski-Harabasz Index: {best_calinski_harabasz:.4f} Number of clusters: {best_params_calinski}\")\n",
+    "print(f\"Best Davies-Bouldin Score: {best_davies_bouldin:.4f} Number of clusters: {best_params_davies}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "786287e3-9102-42f0-9d32-3726e60f6841",
+   "metadata": {},
+   "source": [
+    "- The negative Silhouette Score and low Calinski-Harabasz Index highlight that Spectral Clustering struggles to find meaningful clusters in this dataset.\n",
+    "- While the Davies-Bouldin Score suggests better separation at n_clusters=13, it may not be consistent with the overall cluster quality.\n",
+    "- Spectral Clustering depends heavily on the construction of the similarity graph (e.g., the affinity matrix or kernel used). Poorly constructed graphs can lead to suboptimal clustering.\n",
+    "- Based on all this, we can conclude that Spectral clustering is not appropriate algorithm for this clustering task."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8466f338-da71-4071-9d5c-0e4b688e26c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
